# anrs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  REVIEW_PROMPT.md  SECURITY.md  gemini_review.md  mkdocs.yml  requirements.txt  ultimate.md
cli/: ANRS_README.md  MANIFEST.in  README.md  pyproject.toml  setup.py
cli/data/adapters/: README.md
cli/data/adapters/claude-code/: CLAUDE.md  README.md
cli/data/adapters/claude-code/modes/: CLAUDE-build.md  CLAUDE-review.md
cli/data/adapters/codex/: AGENTS.md  README.md
cli/data/adapters/codex/modes/: AGENTS-build.md  AGENTS-plan.md  AGENTS-review.md
cli/data/adapters/cursor/: .cursorrules  README.md
cli/data/adapters/cursor/modes/: cursorrules-build  cursorrules-plan
cli/data/adapters/opencode/: README.md
cli/data/adapters/opencode/agents/: anrs-build.md  anrs-plan.md
cli/data/templates/: README.md
cli/data/templates/files/: ENTRY.md  state.template.json
cli/data/templates/files/harness/: config.template.json
cli/data/templates/files/plans/: active.README.md  backlog.README.md  task-template.md
cli/data/templates/files/skills/: index.template.json
cli/data/templates/manifests/: full.json  minimal.json  standard.json
cli/src/anrs/: __init__.py  adapter.py  backup.py  completion.py  constants.py  doctor_cmd.py  harness_cmd.py  init_cmd.py  main.py  state.py  status.py  upgrade.py
cli/src/anrs/harness/: README.md  quality_gate.py
cli/tests/: conftest.py  test_adapter.py  test_backup.py  test_constants.py  test_doctor.py  test_harness.py  test_init.py  test_integration.py  test_main.py  test_state.py  test_status.py  test_upgrade.py
(+228 files in other folders)
