[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anrs"
version = "0.1.0"
description = "ANRS (AI-Native Repo Spec) - A vendor-neutral specification for AI-friendly code repositories"
readme = "ANRS_README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ANRS Contributors"}
]
keywords = ["ai", "specification", "repository", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-json-report>=1.5.0",
]
lint = [
    "ruff>=0.1.0",
    "radon>=6.0.0",
]
security = [
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]
validate = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.0",
]
all = [
    "anrs[dev,lint,security,validate]",
]

[project.scripts]
anrs = "anrs.main:cli"

[project.urls]
Homepage = "https://github.com/artsyne/anrs"
Documentation = "https://artsyne.github.io/anrs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["anrs*"]

[tool.setuptools.package-data]
anrs = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=anrs --cov-report=term-missing"
